refactor gradle plugins